bug squishing, aligning

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -29,18 +29,7 @@ header {
     justify-content: center;
     align-items: center;
 
-    a {
-      font-size:18px;
-      text-decoration: none;
-      color: white;
-      height: 30px;
-      padding: 5px;
 
-      &:hover {
-        background-color: rgba(255,255,255,.5);
-      	transition: .1s, ease-in;
-      }
-    }
 
     ul {
       display: flex;
@@ -50,9 +39,24 @@ header {
         display: flex;
         flex-direction: row;
         list-style:none;
-        justify-content: center;
         width: 30%;
         margin:0 10px;
+
+        a {
+          display: flex;
+          flex-direction: column;
+          font-size:18px;
+          justify-content: center;
+          text-decoration: none;
+          color: white;
+          height: 30px;
+          padding: 5px;
+
+          &:hover {
+            background-color: rgba(255,255,255,.5);
+            transition: .1s, ease-in;
+          }
+        }
       }
     }
   }
@@ -76,15 +80,14 @@ CTA****************************************
   background-position: center;
   background-repeat:no-repeat;
   margin:0 auto;
-  padding-bottom: 0vh;
   width: 100vw;
-  height: 100vh;
+  height: 88vh;
 
   #CtaText {
     width: 100%;
-    font-size: 8vw;
+    font-size: 7vw;
     height: 10vh;
-    margin-top: 10vh;
+    margin-top: 12vh;
     text-align: center;
   }
 
@@ -97,13 +100,12 @@ CTA****************************************
     h2 {
       font-size: 5vw;
       text-align: center;
-      margin-top: 30px;
+      margin-top: 40px;
       margin-bottom:10%;
     }
 
     #CtasubText {
       text-align: center;
-      margin-top:9%;
       font-size:6vw;
       width: 100%;
     }
@@ -111,6 +113,7 @@ CTA****************************************
 }
 
 .MainCtaButton {
+  display: block;
   text-decoration:none;
 }
 
@@ -119,7 +122,6 @@ CTA****************************************
   padding: 30px;
   color: white;
   text-align: center;
-  margin-bottom:9vh;
 }
 
 .displayNo {
@@ -144,7 +146,7 @@ PORTFOLIO**********************************
   margin:0 auto;
   padding-bottom:8vh;
   width: 100vw;
-  min-height: 100vh;
+  min-height: 80vh;
   text-align: center;
 
   h3 {
@@ -152,6 +154,18 @@ PORTFOLIO**********************************
     text-align: center;
     width: 100%;
   }
+
+  p {
+    font-size: 13px;
+  }
+
+  .section-title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
 
   button {
     background-color: orange;
@@ -162,7 +176,7 @@ PORTFOLIO**********************************
   }
 
   .portfolio-title {
-    margin-top: 3vh;
+    margin-top: 4.5vh;
     margin-bottom: 1vh;
   }
 
@@ -171,12 +185,10 @@ PORTFOLIO**********************************
     margin: 0 auto;
   }
 
-  .portfolio-description {
-    margin: 0;
-  }
-
   .heartImage {
-    width:8vw;
+    width:6vw;
+    height: 6vw;
+    margin: 0 5px;
   }
 }
 
@@ -201,6 +213,10 @@ Contact Page*******************************
     width: 20vw;
     height: 20vw;
     padding-bottom: 3vh;
+
+    a {
+
+    }
   }
 
   .mailImage, .linkedinImage {
@@ -217,4 +233,18 @@ Contact Page*******************************
 
 .wrapper {
   margin-top:30vh;
+}
+
+/******************************************
+Footer*******************************
+******************************************/
+
+footer {
+  display :flex;
+  flex-direction:column;
+  color: white;
+  background-color: black;
+  height: 12vh;
+  justify-content: center;
+  text-align: center;
 }
